--- a/_config.yml
+++ b/_config.yml
@@ -10,4 +10,7 @@ title: RMIT Links
 description: A collection of links (and more) for RMIT.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://rmitlinks.github.io" # the base hostname & protocol for your site
+real_name: RMIT University
+real_home: "https://rmit.edu.au"
+source_url: "https://github.com/rmitlinks/rmitlinks.github.io"
 exclude: ['README.md', 'CONTRIBUTING.md', 'Gemfile.lock', 'Gemfile']
